# wemeet-wayland-screenshare

./: .gitignore  CMakeLists.txt  README.md  flake.nix  format.hpp  framebuf.hpp  helpers.hpp  hook.cpp  hook.hpp  hook_opencv.hpp  interface.hpp  payload.cpp  payload.hpp
experiments/krfb-virualmon-calling/: CMakeLists.txt  main.cpp
experiments/wemeet-qscreen-behaviour/: CMakeLists.txt  qscreen_hook.cpp
experiments/wemeet-x11-behaviour/: 1_basic_hook.cpp  1_basic_hook.md  2_xdamage_hook.cpp  2_xdamage_hook.md  CMakeLists.txt  original_funcs.hpp  run_hook.py
resource/: diagram.drawio  instruction-figures.dps
tests/: CMakeLists.txt  framebuf_test.cpp  test_main.cpp
